# agentopia

./: .env.local.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  COMPREHENSIVE_ANALYSIS.md  COOKIECUTTER_GUIDE.md  DEEP_AGENT_PATTERNS.md  DEPLOYMENT_AND_TESTING_GUIDE.md  DEPLOYMENT_GUIDE.md  LICENSE  MIGRATION_PLAN.md  Makefile  README.md  SSE_DOCUMENTATION_INDEX.md  SSE_QUICK_REFERENCE.md  SSE_TRANSPORT_ARCHITECTURE.md  SYSTEM_OVERVIEW.md  TODO.md  cloudflare-mcp.txt  mount_mcp.sh  pyproject.toml  test-integration.sh  test-langgraph.js
.github/workflows/: ci.yml  deploy-agents.yml
agent-framework/: DEPLOYMENT_GUIDE.md  Makefile  README.md
agent-framework/.github/workflows/: cleanup-agents.yml  deploy-agents.yml
agent-framework/agents/judge/: README.md
agent-framework/generated-agents/: README.md
agent-framework/generators/javascript/: base-agent.js
agent-framework/generators/python/: agent_builder.py  requirements.txt
agents/: README.md
agents/agent-framework/: base-agent.js
agents/agent-generator/: README.md  wrangler.toml
agents/agent-generator-test/generator/: README.md  wrangler.toml
agents/agent-generator/scripts/: deploy.sh
agents/agent-generator/src/: entry.py
agents/ci-workflow-demo/src/: entry.py
agents/cybersec-agent/: .env.local.example  README.md  wrangler.toml
agents/cybersec-agent/scripts/: create-dns.sh  deploy.sh
agents/cybersec-agent/src/: entry.py  index.js
agents/deployment-test-router/src/: entry.py
agents/infosec/: package-lock.json  package.json  wrangler.toml
agents/infosec/scripts/: deploy-all.sh
agents/infosec/src/: index.js
agents/judge/: README.md  wrangler.toml
agents/judge-js/: .env.local.example  README.md  package-lock.json  package.json  wrangler.toml
agents/judge-js/agent-framework/: base-agent.js
agents/judge-js/scripts/: deploy-all.sh
agents/judge-js/src/: index.js
agents/judge-specialist/src/: entry.py
agents/judge/agent-framework/: config-schema.js
agents/judge/scripts/: deploy.sh
agents/judge/src/: entry.py
agents/lancer/: README.md  package-lock.json  package.json  wrangler.toml
agents/lancer/agent-framework/: base-agent.js
agents/lancer/scripts/: deploy-all.sh
agents/lancer/src/: index.js
agents/scout/: .gitignore  README.md  package-lock.json  package.json  wrangler.toml
agents/scout/agent-framework/: base-agent.js
agents/scout/src/: index.js
agents/shield/: README.md  package.json  wrangler.toml
agents/shield/agent-framework/: base-agent.js
agents/shield/scripts/: deploy-all.sh
agents/shield/src/: index.js
agents/tests/: conftest.py  helpers.js  infosec.test.js  lancer.test.js  package-lock.json  package.json  scout.test.js  shield.test.js  test_judge.py  vitest.config.js
cookiecutter-repos/cc-js-specialist-agent/: .gitignore  Makefile  README.md  cookiecutter.json
cookiecutter-repos/cc-js-specialist-agent/hooks/: post_gen_project.py  pre_gen_project.py
cookiecutter-repos/cc-js-workflow-supervisor/: .gitignore  Makefile  README.md  cookiecutter.json
cookiecutter-repos/cc-py-router-agent/: .gitignore  Makefile  README.md  cookiecutter.json
cookiecutter-repos/cc-py-router-agent/{{cookiecutter.project_slug}}/: .gitignore  pyproject.toml
cookiecutter-repos/cc-py-router-agent/{{cookiecutter.project_slug}}/agent_framework/: base_agent.py  router_agent.py
cookiecutter-repos/cc-py-router-agent/{{cookiecutter.project_slug}}/scripts/: deploy.sh
cookiecutter-repos/cc-py-router-agent/{{cookiecutter.project_slug}}/src/: entry.py
cookiecutter-repos/cc-py-specialist-agent/: .gitignore  Makefile  README.md  cookiecutter.json
cookiecutter-repos/cc-py-workflow-supervisor/: Makefile  README.md  SUMMARY.md  cookiecutter.json
cybersec-agent/: bundled.js  create-route.sh  deploy-all.sh  deploy-no-kv.sh  wrangler.toml
cybersec-agent/agent-framework/: agent-builder.js
cybersec-agent/scripts/: deploy-all.sh
cybersec-agent/src/: index-original.js
cybersec-py-test/cybersec-py/src/: entry.py
deployment/: README.md  deploy.sh  setup.sh
deployment/configs/: infosec-supervisor.json  judge.json  lancer.json  scout.json  shield.json
deployment/pulumi/: Pulumi.yaml  index.ts  package-lock.json  package.json
docs/: AGENT_CREATION_CHECKLIST.md  evolve-integration.md
generators/: README.md
generators/javascript/: agent-builder.js  base-agent.js  config-schema.js  evolve-bridge.js  langgraph-agent.js  package-lock.json  package.json  router-agent.js  tool-registry.js
generators/python/: agent_builder.py
judge-py-test/judge-py/: wrangler.toml
judge/agent-framework/: build-agent.js
judge/scripts/: create-dns.sh  create-route.sh  deploy-all.sh
judge/src/: index-no-kv.js.backup  index-original.js
test-infosec-supervisor/: README.md  package.json  wrangler.toml
test-infosec-supervisor-py/: .gitignore  README.md  wrangler.toml
test-infosec-supervisor-py/scripts/: deploy.sh
test-infosec-supervisor-py/src/: entry.py
test-infosec-supervisor/scripts/: deploy-all.sh
test-infosec-supervisor/src/: index.js
test-langgraph-output/js-supervisor-test/: README.md  package.json  wrangler.toml
test-py-final/: README.md  wrangler.toml
test-py-final/src/: entry.py
threat-intel-test/: README.md  wrangler.toml
threat-intel-test/scripts/: deploy-all.sh
(+96 files in other folders)
