[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-framework"
version = "2.0.0"
description = "Multi-language agent framework for building AI agents on Cloudflare Workers"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Agent Framework Team" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "cookiecutter>=2.6.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/your-org/agent-framework"
Documentation = "https://github.com/your-org/agent-framework/blob/main/README.md"
Repository = "https://github.com/your-org/agent-framework"
Issues = "https://github.com/your-org/agent-framework/issues"

[project.scripts]
agent-gen = "generators.python.agent_builder:main"

[tool.hatch.build.targets.wheel]
packages = ["generators"]

[tool.uv]
dev-dependencies = [
    "black>=23.0.0",
    "isort>=5.12.0", 
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | agents
  | templates
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["agents/*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
    "agents/",
    "generated-agents/",
]

[tool.ruff]
target-version = "py39"
line-length = 100
force-exclude = true
extend-exclude = [
    "generators/python/templates/router_agent",
    "generators/python/templates/specialist_agent",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "E722", # bare except, used for optional import fallbacks
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "agents",
    "generated-agents",
    "generators/python/templates",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"generators/python/agent_framework/base_agent.py" = ["F401"]
"generators/python/agent_framework/langchain_compat.py" = ["F821"]
"generators/python/agent_framework/langgraph_agent.py" = ["F821"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
